--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "~18.2.14",
     "@types/react-native": "^0.72.2",
     "babel-plugin-module-resolver": "^5.0.0",
+    "react-native-svg-transformer": "^1.1.0",
     "typescript": "^5.1.3"
   },
   "private": true
